kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-service
  namespace: dex
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - idp.do.storageos.net
    secretName: ingress-cert
  rules:
  - host: idp.do.storageos.net
    http:
      paths:       
      - path: /dex/
        pathType: Exact
        backend:
          service:
            name: dex
            port:
              number: 5556
